src/parser/vnpu.output
Grammar

    0 $accept: program $end

    1 program: VNPU version ';' decls

    2 version: ID

    3 decls: ε
    4      | decls decl

    5 decl: device_decl
    6     | tensor_decl
    7     | kernel_decl
    8     | graph_decl
    9     | isolate_decl
   10     | policy_decl

   11 device_decl: DEVICE ID '{' devprops '}'

   12 devprops: ε
   13         | devprops ID '=' literal ';'

   14 tensor_decl: TENSOR ID ':' DTYPE shape optloc ';'

   15 shape: '[' dims ']'

   16 dims: dim
   17     | dims ',' dim

   18 dim: INT
   19    | ID

   20 optloc: ε
   21       | AT ID

   22 kernel_decl: KERNEL ID '=' call ARROW ID ';'

   23 call: qualid '(' optargs ')'

   24 qualid: ID '.' ID
   25       | qualid '.' ID

   26 optargs: ε
   27        | args

   28 args: arg
   29     | args ',' arg

   30 arg: ID
   31    | literal

   32 graph_decl: GRAPH ID '{' graphstmts '}'

   33 graphstmts: ε
   34           | graphstmts ID ';'

   35 isolate_decl: ISOLATE ID '{' isoprops '}'

   36 isoprops: ε
   37         | isoprops isoprop

   38 isoprop: MEMBRANE '=' membrane ';'
   39        | ENTRY ID ';'
   40        | PORTS '{' portdecls '}'

   41 portdecls: ε
   42          | portdecls portdecl

   43 portdecl: ID ':' porttype ';'

   44 porttype: INTENT
   45         | EVIDENCE
   46         | TENSORTYPE
   47         | BYTES

   48 membrane: INNER
   49         | TRANS
   50         | OUTER

   51 policy_decl: POLICY ID '{' polstmts '}'

   52 polstmts: ε
   53         | polstmts polstmt

   54 polstmt: MEMBRANE membrane action ID optcond ';'

   55 action: ALLOWS
   56       | DENIES

   57 optcond: ε
   58        | WHEN expr

   59 expr: expr AND expr
   60     | expr OR expr
   61     | ID COP literal
   62     | '(' expr ')'

   63 literal: INT
   64        | FLOAT
   65        | STRING
   66        | BOOL


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 23 62
    ')' (41) 23 62
    ',' (44) 17 29
    '.' (46) 24 25
    ':' (58) 14 43
    ';' (59) 1 13 14 22 34 38 39 43 54
    '=' (61) 13 22 38
    '[' (91) 15
    ']' (93) 15
    '{' (123) 11 32 35 40 51
    '}' (125) 11 32 35 40 51
    error (256)
    VNPU (258) 1
    DEVICE (259) 11
    TENSOR (260) 14
    KERNEL (261) 22
    GRAPH (262) 32
    ISOLATE (263) 35
    POLICY (264) 51
    MEMBRANE (265) 38 54
    ENTRY (266) 39
    PORTS (267) 40
    INNER (268) 48
    TRANS (269) 49
    OUTER (270) 50
    ALLOWS (271) 55
    DENIES (272) 56
    WHEN (273) 58
    AND (274) 59
    OR (275) 60
    AT (276) 21
    ARROW (277) 22
    INTENT (278) 44
    EVIDENCE (279) 45
    TENSORTYPE (280) 46
    BYTES (281) 47
    ID <s> (282) 2 11 13 14 19 21 22 24 25 30 32 34 35 39 43 51 54 61
    DTYPE <s> (283) 14
    STRING <s> (284) 65
    COP <s> (285) 61
    INT <i> (286) 18 63
    BOOL <i> (287) 66
    FLOAT <f> (288) 64


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program (46)
        on left: 1
        on right: 0
    version (47)
        on left: 2
        on right: 1
    decls (48)
        on left: 3 4
        on right: 1 4
    decl (49)
        on left: 5 6 7 8 9 10
        on right: 4
    device_decl (50)
        on left: 11
        on right: 5
    devprops (51)
        on left: 12 13
        on right: 11 13
    tensor_decl (52)
        on left: 14
        on right: 6
    shape (53)
        on left: 15
        on right: 14
    dims (54)
        on left: 16 17
        on right: 15 17
    dim (55)
        on left: 18 19
        on right: 16 17
    optloc (56)
        on left: 20 21
        on right: 14
    kernel_decl (57)
        on left: 22
        on right: 7
    call (58)
        on left: 23
        on right: 22
    qualid (59)
        on left: 24 25
        on right: 23 25
    optargs (60)
        on left: 26 27
        on right: 23
    args (61)
        on left: 28 29
        on right: 27 29
    arg (62)
        on left: 30 31
        on right: 28 29
    graph_decl (63)
        on left: 32
        on right: 8
    graphstmts (64)
        on left: 33 34
        on right: 32 34
    isolate_decl (65)
        on left: 35
        on right: 9
    isoprops (66)
        on left: 36 37
        on right: 35 37
    isoprop (67)
        on left: 38 39 40
        on right: 37
    portdecls (68)
        on left: 41 42
        on right: 40 42
    portdecl (69)
        on left: 43
        on right: 42
    porttype (70)
        on left: 44 45 46 47
        on right: 43
    membrane (71)
        on left: 48 49 50
        on right: 38 54
    policy_decl (72)
        on left: 51
        on right: 10
    polstmts (73)
        on left: 52 53
        on right: 51 53
    polstmt (74)
        on left: 54
        on right: 53
    action (75)
        on left: 55 56
        on right: 54
    optcond (76)
        on left: 57 58
        on right: 54
    expr (77)
        on left: 59 60 61 62
        on right: 58 59 60 62
    literal (78)
        on left: 63 64 65 66
        on right: 13 31 61


State 0

    0 $accept: • program $end

    VNPU  shift, and go to state 1

    program  go to state 2


State 1

    1 program: VNPU • version ';' decls

    ID  shift, and go to state 3

    version  go to state 4


State 2

    0 $accept: program • $end

    $end  shift, and go to state 5


State 3

    2 version: ID •

    $default  reduce using rule 2 (version)


State 4

    1 program: VNPU version • ';' decls

    ';'  shift, and go to state 6


State 5

    0 $accept: program $end •

    $default  accept


State 6

    1 program: VNPU version ';' • decls

    $default  reduce using rule 3 (decls)

    decls  go to state 7


State 7

    1 program: VNPU version ';' decls •
    4 decls: decls • decl

    DEVICE   shift, and go to state 8
    TENSOR   shift, and go to state 9
    KERNEL   shift, and go to state 10
    GRAPH    shift, and go to state 11
    ISOLATE  shift, and go to state 12
    POLICY   shift, and go to state 13

    $default  reduce using rule 1 (program)

    decl          go to state 14
    device_decl   go to state 15
    tensor_decl   go to state 16
    kernel_decl   go to state 17
    graph_decl    go to state 18
    isolate_decl  go to state 19
    policy_decl   go to state 20


State 8

   11 device_decl: DEVICE • ID '{' devprops '}'

    ID  shift, and go to state 21


State 9

   14 tensor_decl: TENSOR • ID ':' DTYPE shape optloc ';'

    ID  shift, and go to state 22


State 10

   22 kernel_decl: KERNEL • ID '=' call ARROW ID ';'

    ID  shift, and go to state 23


State 11

   32 graph_decl: GRAPH • ID '{' graphstmts '}'

    ID  shift, and go to state 24


State 12

   35 isolate_decl: ISOLATE • ID '{' isoprops '}'

    ID  shift, and go to state 25


State 13

   51 policy_decl: POLICY • ID '{' polstmts '}'

    ID  shift, and go to state 26


State 14

    4 decls: decls decl •

    $default  reduce using rule 4 (decls)


State 15

    5 decl: device_decl •

    $default  reduce using rule 5 (decl)


State 16

    6 decl: tensor_decl •

    $default  reduce using rule 6 (decl)


State 17

    7 decl: kernel_decl •

    $default  reduce using rule 7 (decl)


State 18

    8 decl: graph_decl •

    $default  reduce using rule 8 (decl)


State 19

    9 decl: isolate_decl •

    $default  reduce using rule 9 (decl)


State 20

   10 decl: policy_decl •

    $default  reduce using rule 10 (decl)


State 21

   11 device_decl: DEVICE ID • '{' devprops '}'

    '{'  shift, and go to state 27


State 22

   14 tensor_decl: TENSOR ID • ':' DTYPE shape optloc ';'

    ':'  shift, and go to state 28


State 23

   22 kernel_decl: KERNEL ID • '=' call ARROW ID ';'

    '='  shift, and go to state 29


State 24

   32 graph_decl: GRAPH ID • '{' graphstmts '}'

    '{'  shift, and go to state 30


State 25

   35 isolate_decl: ISOLATE ID • '{' isoprops '}'

    '{'  shift, and go to state 31


State 26

   51 policy_decl: POLICY ID • '{' polstmts '}'

    '{'  shift, and go to state 32


State 27

   11 device_decl: DEVICE ID '{' • devprops '}'

    $default  reduce using rule 12 (devprops)

    devprops  go to state 33


State 28

   14 tensor_decl: TENSOR ID ':' • DTYPE shape optloc ';'

    DTYPE  shift, and go to state 34


State 29

   22 kernel_decl: KERNEL ID '=' • call ARROW ID ';'

    ID  shift, and go to state 35

    call    go to state 36
    qualid  go to state 37


State 30

   32 graph_decl: GRAPH ID '{' • graphstmts '}'

    $default  reduce using rule 33 (graphstmts)

    graphstmts  go to state 38


State 31

   35 isolate_decl: ISOLATE ID '{' • isoprops '}'

    $default  reduce using rule 36 (isoprops)

    isoprops  go to state 39


State 32

   51 policy_decl: POLICY ID '{' • polstmts '}'

    $default  reduce using rule 52 (polstmts)

    polstmts  go to state 40


State 33

   11 device_decl: DEVICE ID '{' devprops • '}'
   13 devprops: devprops • ID '=' literal ';'

    ID   shift, and go to state 41
    '}'  shift, and go to state 42


State 34

   14 tensor_decl: TENSOR ID ':' DTYPE • shape optloc ';'

    '['  shift, and go to state 43

    shape  go to state 44


State 35

   24 qualid: ID • '.' ID

    '.'  shift, and go to state 45


State 36

   22 kernel_decl: KERNEL ID '=' call • ARROW ID ';'

    ARROW  shift, and go to state 46


State 37

   23 call: qualid • '(' optargs ')'
   25 qualid: qualid • '.' ID

    '('  shift, and go to state 47
    '.'  shift, and go to state 48


State 38

   32 graph_decl: GRAPH ID '{' graphstmts • '}'
   34 graphstmts: graphstmts • ID ';'

    ID   shift, and go to state 49
    '}'  shift, and go to state 50


State 39

   35 isolate_decl: ISOLATE ID '{' isoprops • '}'
   37 isoprops: isoprops • isoprop

    MEMBRANE  shift, and go to state 51
    ENTRY     shift, and go to state 52
    PORTS     shift, and go to state 53
    '}'       shift, and go to state 54

    isoprop  go to state 55


State 40

   51 policy_decl: POLICY ID '{' polstmts • '}'
   53 polstmts: polstmts • polstmt

    MEMBRANE  shift, and go to state 56
    '}'       shift, and go to state 57

    polstmt  go to state 58


State 41

   13 devprops: devprops ID • '=' literal ';'

    '='  shift, and go to state 59


State 42

   11 device_decl: DEVICE ID '{' devprops '}' •

    $default  reduce using rule 11 (device_decl)


State 43

   15 shape: '[' • dims ']'

    ID   shift, and go to state 60
    INT  shift, and go to state 61

    dims  go to state 62
    dim   go to state 63


State 44

   14 tensor_decl: TENSOR ID ':' DTYPE shape • optloc ';'

    AT  shift, and go to state 64

    $default  reduce using rule 20 (optloc)

    optloc  go to state 65


State 45

   24 qualid: ID '.' • ID

    ID  shift, and go to state 66


State 46

   22 kernel_decl: KERNEL ID '=' call ARROW • ID ';'

    ID  shift, and go to state 67


State 47

   23 call: qualid '(' • optargs ')'

    ID      shift, and go to state 68
    STRING  shift, and go to state 69
    INT     shift, and go to state 70
    BOOL    shift, and go to state 71
    FLOAT   shift, and go to state 72

    $default  reduce using rule 26 (optargs)

    optargs  go to state 73
    args     go to state 74
    arg      go to state 75
    literal  go to state 76


State 48

   25 qualid: qualid '.' • ID

    ID  shift, and go to state 77


State 49

   34 graphstmts: graphstmts ID • ';'

    ';'  shift, and go to state 78


State 50

   32 graph_decl: GRAPH ID '{' graphstmts '}' •

    $default  reduce using rule 32 (graph_decl)


State 51

   38 isoprop: MEMBRANE • '=' membrane ';'

    '='  shift, and go to state 79


State 52

   39 isoprop: ENTRY • ID ';'

    ID  shift, and go to state 80


State 53

   40 isoprop: PORTS • '{' portdecls '}'

    '{'  shift, and go to state 81


State 54

   35 isolate_decl: ISOLATE ID '{' isoprops '}' •

    $default  reduce using rule 35 (isolate_decl)


State 55

   37 isoprops: isoprops isoprop •

    $default  reduce using rule 37 (isoprops)


State 56

   54 polstmt: MEMBRANE • membrane action ID optcond ';'

    INNER  shift, and go to state 82
    TRANS  shift, and go to state 83
    OUTER  shift, and go to state 84

    membrane  go to state 85


State 57

   51 policy_decl: POLICY ID '{' polstmts '}' •

    $default  reduce using rule 51 (policy_decl)


State 58

   53 polstmts: polstmts polstmt •

    $default  reduce using rule 53 (polstmts)


State 59

   13 devprops: devprops ID '=' • literal ';'

    STRING  shift, and go to state 69
    INT     shift, and go to state 70
    BOOL    shift, and go to state 71
    FLOAT   shift, and go to state 72

    literal  go to state 86


State 60

   19 dim: ID •

    $default  reduce using rule 19 (dim)


State 61

   18 dim: INT •

    $default  reduce using rule 18 (dim)


State 62

   15 shape: '[' dims • ']'
   17 dims: dims • ',' dim

    ']'  shift, and go to state 87
    ','  shift, and go to state 88


State 63

   16 dims: dim •

    $default  reduce using rule 16 (dims)


State 64

   21 optloc: AT • ID

    ID  shift, and go to state 89


State 65

   14 tensor_decl: TENSOR ID ':' DTYPE shape optloc • ';'

    ';'  shift, and go to state 90


State 66

   24 qualid: ID '.' ID •

    $default  reduce using rule 24 (qualid)


State 67

   22 kernel_decl: KERNEL ID '=' call ARROW ID • ';'

    ';'  shift, and go to state 91


State 68

   30 arg: ID •

    $default  reduce using rule 30 (arg)


State 69

   65 literal: STRING •

    $default  reduce using rule 65 (literal)


State 70

   63 literal: INT •

    $default  reduce using rule 63 (literal)


State 71

   66 literal: BOOL •

    $default  reduce using rule 66 (literal)


State 72

   64 literal: FLOAT •

    $default  reduce using rule 64 (literal)


State 73

   23 call: qualid '(' optargs • ')'

    ')'  shift, and go to state 92


State 74

   27 optargs: args •
   29 args: args • ',' arg

    ','  shift, and go to state 93

    $default  reduce using rule 27 (optargs)


State 75

   28 args: arg •

    $default  reduce using rule 28 (args)


State 76

   31 arg: literal •

    $default  reduce using rule 31 (arg)


State 77

   25 qualid: qualid '.' ID •

    $default  reduce using rule 25 (qualid)


State 78

   34 graphstmts: graphstmts ID ';' •

    $default  reduce using rule 34 (graphstmts)


State 79

   38 isoprop: MEMBRANE '=' • membrane ';'

    INNER  shift, and go to state 82
    TRANS  shift, and go to state 83
    OUTER  shift, and go to state 84

    membrane  go to state 94


State 80

   39 isoprop: ENTRY ID • ';'

    ';'  shift, and go to state 95


State 81

   40 isoprop: PORTS '{' • portdecls '}'

    $default  reduce using rule 41 (portdecls)

    portdecls  go to state 96


State 82

   48 membrane: INNER •

    $default  reduce using rule 48 (membrane)


State 83

   49 membrane: TRANS •

    $default  reduce using rule 49 (membrane)


State 84

   50 membrane: OUTER •

    $default  reduce using rule 50 (membrane)


State 85

   54 polstmt: MEMBRANE membrane • action ID optcond ';'

    ALLOWS  shift, and go to state 97
    DENIES  shift, and go to state 98

    action  go to state 99


State 86

   13 devprops: devprops ID '=' literal • ';'

    ';'  shift, and go to state 100


State 87

   15 shape: '[' dims ']' •

    $default  reduce using rule 15 (shape)


State 88

   17 dims: dims ',' • dim

    ID   shift, and go to state 60
    INT  shift, and go to state 61

    dim  go to state 101


State 89

   21 optloc: AT ID •

    $default  reduce using rule 21 (optloc)


State 90

   14 tensor_decl: TENSOR ID ':' DTYPE shape optloc ';' •

    $default  reduce using rule 14 (tensor_decl)


State 91

   22 kernel_decl: KERNEL ID '=' call ARROW ID ';' •

    $default  reduce using rule 22 (kernel_decl)


State 92

   23 call: qualid '(' optargs ')' •

    $default  reduce using rule 23 (call)


State 93

   29 args: args ',' • arg

    ID      shift, and go to state 68
    STRING  shift, and go to state 69
    INT     shift, and go to state 70
    BOOL    shift, and go to state 71
    FLOAT   shift, and go to state 72

    arg      go to state 102
    literal  go to state 76


State 94

   38 isoprop: MEMBRANE '=' membrane • ';'

    ';'  shift, and go to state 103


State 95

   39 isoprop: ENTRY ID ';' •

    $default  reduce using rule 39 (isoprop)


State 96

   40 isoprop: PORTS '{' portdecls • '}'
   42 portdecls: portdecls • portdecl

    ID   shift, and go to state 104
    '}'  shift, and go to state 105

    portdecl  go to state 106


State 97

   55 action: ALLOWS •

    $default  reduce using rule 55 (action)


State 98

   56 action: DENIES •

    $default  reduce using rule 56 (action)


State 99

   54 polstmt: MEMBRANE membrane action • ID optcond ';'

    ID  shift, and go to state 107


State 100

   13 devprops: devprops ID '=' literal ';' •

    $default  reduce using rule 13 (devprops)


State 101

   17 dims: dims ',' dim •

    $default  reduce using rule 17 (dims)


State 102

   29 args: args ',' arg •

    $default  reduce using rule 29 (args)


State 103

   38 isoprop: MEMBRANE '=' membrane ';' •

    $default  reduce using rule 38 (isoprop)


State 104

   43 portdecl: ID • ':' porttype ';'

    ':'  shift, and go to state 108


State 105

   40 isoprop: PORTS '{' portdecls '}' •

    $default  reduce using rule 40 (isoprop)


State 106

   42 portdecls: portdecls portdecl •

    $default  reduce using rule 42 (portdecls)


State 107

   54 polstmt: MEMBRANE membrane action ID • optcond ';'

    WHEN  shift, and go to state 109

    $default  reduce using rule 57 (optcond)

    optcond  go to state 110


State 108

   43 portdecl: ID ':' • porttype ';'

    INTENT      shift, and go to state 111
    EVIDENCE    shift, and go to state 112
    TENSORTYPE  shift, and go to state 113
    BYTES       shift, and go to state 114

    porttype  go to state 115


State 109

   58 optcond: WHEN • expr

    ID   shift, and go to state 116
    '('  shift, and go to state 117

    expr  go to state 118


State 110

   54 polstmt: MEMBRANE membrane action ID optcond • ';'

    ';'  shift, and go to state 119


State 111

   44 porttype: INTENT •

    $default  reduce using rule 44 (porttype)


State 112

   45 porttype: EVIDENCE •

    $default  reduce using rule 45 (porttype)


State 113

   46 porttype: TENSORTYPE •

    $default  reduce using rule 46 (porttype)


State 114

   47 porttype: BYTES •

    $default  reduce using rule 47 (porttype)


State 115

   43 portdecl: ID ':' porttype • ';'

    ';'  shift, and go to state 120


State 116

   61 expr: ID • COP literal

    COP  shift, and go to state 121


State 117

   62 expr: '(' • expr ')'

    ID   shift, and go to state 116
    '('  shift, and go to state 117

    expr  go to state 122


State 118

   58 optcond: WHEN expr •
   59 expr: expr • AND expr
   60     | expr • OR expr

    AND  shift, and go to state 123
    OR   shift, and go to state 124

    $default  reduce using rule 58 (optcond)


State 119

   54 polstmt: MEMBRANE membrane action ID optcond ';' •

    $default  reduce using rule 54 (polstmt)


State 120

   43 portdecl: ID ':' porttype ';' •

    $default  reduce using rule 43 (portdecl)


State 121

   61 expr: ID COP • literal

    STRING  shift, and go to state 69
    INT     shift, and go to state 70
    BOOL    shift, and go to state 71
    FLOAT   shift, and go to state 72

    literal  go to state 125


State 122

   59 expr: expr • AND expr
   60     | expr • OR expr
   62     | '(' expr • ')'

    AND  shift, and go to state 123
    OR   shift, and go to state 124
    ')'  shift, and go to state 126


State 123

   59 expr: expr AND • expr

    ID   shift, and go to state 116
    '('  shift, and go to state 117

    expr  go to state 127


State 124

   60 expr: expr OR • expr

    ID   shift, and go to state 116
    '('  shift, and go to state 117

    expr  go to state 128


State 125

   61 expr: ID COP literal •

    $default  reduce using rule 61 (expr)


State 126

   62 expr: '(' expr ')' •

    $default  reduce using rule 62 (expr)


State 127

   59 expr: expr • AND expr
   59     | expr AND expr •
   60     | expr • OR expr

    $default  reduce using rule 59 (expr)


State 128

   59 expr: expr • AND expr
   60     | expr • OR expr
   60     | expr OR expr •

    AND  shift, and go to state 123

    $default  reduce using rule 60 (expr)
